* removed "getDependentBeanNames" hook and implementation from AbstractAutowireCapable/DefaultListableBeanFactory
* fixed DefaultListableBeanFactory's "getBeansOfType" implementation to correctly ignore abstract FactoryBeans
* added "import" element for XML bean definitions, to allow for loading further bean definitions from relative paths

Package org.springframework.context
* factored out the "publishEvent" method into the ApplicationEventPublisher interface, extended by ApplicationContext
* added ApplicationEventPublisherAware and MessageSourceAware interfaces, to be implemented by application objects
* reworked EventPublicationInterceptor to implement ApplicationEventPublisherAware rather than ApplicationContextAware
* AbstractApplicationContext uses the internal MessageSource as "parentMessageSource", if the parent context allows to
* AbstractMessageSource delegates to the parent's "getMessageInternal" method, to avoid "useCodeAsDefaultMessage" trap  

Package org.springframework.core
* fixed "createRelative" implementation in ClassPathResource to correctly handle relative subdirectories
* added constructor that takes an explicit ClassLoader to ClassPathResource

Package org.springframework.ejb
* fixed AbstractSlsbInvokerInterceptor's "create" to invoke on correct Method reference in case of "cacheHome"=false

Package org.springframework.jdbc
* SingleConnectionDataSource and TransactionAwareDataSourceProxy do not use thread context class loader for proxies
* clarified that LobHandler's getters are supposed to return Java null in case of SQL NULL (following the JDBC spec)
* OracleLobHandler's getter implementations return null rather than an empty array/stream in case of SQL NULL 

Package org.springframework.jms
* added "sessionAcknowledgeModeName" property to JmsTemplate, for specifying a JMS Session acknowledge constant by name
* added acknowledge mode check to JmsTemplate and JmsTemplate102 before calling "acknowledge" on a received message