@@ -16,10 +16,6 @@
 
 package org.springframework.context.access;
 
-import java.io.IOException;
-import java.util.ArrayList;
-import java.util.Collection;
-
 import junit.framework.TestCase;
 
 import org.springframework.beans.factory.BeanFactory;
@@ -27,6 +23,7 @@ import org.springframework.beans.factory.access.BeanFactoryReference;
 import org.springframework.beans.factory.access.SingletonBeanFactoryLocatorTests;
 import org.springframework.beans.factory.access.TestBean;
 import org.springframework.context.support.ClassPathXmlApplicationContext;
+import org.springframework.util.ClassUtils;
 
 /**
  * @author Colin Sampaleanu
@@ -42,17 +39,13 @@ public class ContextSingletonBeanFactoryLocatorTests extends TestCase {
 	}
 
 	public void testBasicFunctionality() {
-		// test a custom subclass of KeyedDefaultBeanFactoryLocator which overrides
-		// getAllDefinitionResources method, since we can't really supply two files
-		// with the same name in the classpath for this test
-		ContextSingletonBeanFactoryLocator facLoc = new ContextSingletonBeanFactoryLocator() {
-			protected Collection getAllDefinitionResources(String resourceName) throws IOException {
-				ArrayList list = new ArrayList();
-				list.add(SingletonBeanFactoryLocatorTests.class.getResource("ref1.xml"));
-				list.add(SingletonBeanFactoryLocatorTests.class.getResource("ref2.xml"));
-				return list;
-			}
-		};
+		
+		
+		// just use definition file from the SingletonBeanFactoryLocator test, since it's
+		// completely valid
+		ContextSingletonBeanFactoryLocator facLoc = new ContextSingletonBeanFactoryLocator(
+				"classpath*:" + ClassUtils.addResourcePathToPackagePath(
+				SingletonBeanFactoryLocatorTests.class, "ref1.xml"));
 		
 		BeanFactoryReference bfr = facLoc.useBeanFactory("a.qualified.name.of.some.sort");
 		BeanFactory fac = bfr.getFactory();
@@ -78,36 +71,5 @@ public class ContextSingletonBeanFactoryLocatorTests extends TestCase {
 		bfr.release();
 		bfr.release();
 		bfr.release();
-	}
-
-	/**
-	 * Now since we overrode getAllDefinitionResources in previous test, verify
-	 * that the class is actually asking for the resource names it should
-	 */
-	public void testBeanRefFileLookup() {
-		ContextSingletonBeanFactoryLocator facLoc = new ContextSingletonBeanFactoryLocator() {
-			protected Collection getAllDefinitionResources(String resourceName) throws IOException {
-				// make sure it asks for "bean-refs.xml", but then ignore that
-				assertTrue(resourceName.equals(ContextSingletonBeanFactoryLocator.BEANS_REFS_XML_NAME));
-				ArrayList list = new ArrayList();
-				list.add(SingletonBeanFactoryLocatorTests.class.getResource("ref1.xml"));
-				list.add(SingletonBeanFactoryLocatorTests.class.getResource("ref2.xml"));
-				return list;
-			}
-		};
-		BeanFactory fac = facLoc.useBeanFactory("a.qualified.name.of.some.sort").getFactory();
-		facLoc = new ContextSingletonBeanFactoryLocator("my-bean-refs.xml") {
-			protected Collection getAllDefinitionResources(String resourceName)
-					throws IOException {
-				// make sure it asks for "my-bean-refs.xml", but then ignore
-				// that
-				assertTrue(resourceName.equals("my-bean-refs.xml"));
-				ArrayList list = new ArrayList();
-				list.add(SingletonBeanFactoryLocatorTests.class.getResource("ref1.xml"));
-				list.add(SingletonBeanFactoryLocatorTests.class.getResource("ref2.xml"));
-				return list;
-			}
-		};
-		fac = facLoc.useBeanFactory("a.qualified.name.of.some.sort").getFactory();
 	}
 }
